--- a/index.html
+++ b/index.html
@@ -1,79 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>图片画廊</title>
-  <style>
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    .gallery img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      margin: 10px;
-    }
-    .pagination {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
-    .pagination button {
-      margin: 0 5px;
-      padding: 5px 10px;
-    }
-  </style>
+	<title>图片画廊</title>
+	<style>
+		.gallery {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-items: center;
+			margin: 20px;
+		}
+
+		.gallery img {
+			width: 200px;
+			height: 200px;
+			margin: 10px;
+			object-fit: cover;
+		}
+
+		.pagination {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin: 20px;
+		}
+
+		.pagination a {
+			margin: 0 10px;
+			padding: 5px 10px;
+			border: 1px solid #ccc;
+			border-radius: 5px;
+			text-decoration: none;
+			color: #333;
+		}
+
+		.pagination a.active {
+			background-color: #333;
+			color: #fff;
+		}
+	</style>
 </head>
 <body>
-  <div class="gallery">
-    <img src="image1.jpg" alt="Image 1">
-    <img src="image2.jpg" alt="Image 2">
-    <img src="image3.jpg" alt="Image 3">
-    <img src="image4.jpg" alt="Image 4">
-    <img src="image5.jpg" alt="Image 5">
-    <!-- 添加更多图片 -->
-  </div>
+	<div class="gallery">
+		<?php
+			$dir = ".";
+			$files = scandir($dir);
+			foreach ($files as $file) {
+				if (in_array(strtolower(pathinfo($file, PATHINFO_EXTENSION)), array("jpg", "jpeg", "png", "gif"))) {
+					echo "<img src='$file'>";
+				}
+			}
+		?>
+	</div>
 
-  <div class="pagination">
-    <button onclick="previousPage()">上一页</button>
-    <button onclick="nextPage()">下一页</button>
-  </div>
-
-  <script>
-    var currentPage = 0;
-    var imagesPerPage = 5; // 每页显示的图片数量
-    var images = document.querySelectorAll('.gallery img');
-    var totalPages = Math.ceil(images.length / imagesPerPage);
-
-    function showPage(page) {
-      var startIndex = page * imagesPerPage;
-      var endIndex = startIndex + imagesPerPage;
-
-      for (var i = 0; i < images.length; i++) {
-        if (i >= startIndex && i < endIndex) {
-          images[i].style.display = 'block';
-        } else {
-          images[i].style.display = 'none';
-        }
-      }
-    }
-
-    function previousPage() {
-      if (currentPage > 0) {
-        currentPage--;
-        showPage(currentPage);
-      }
-    }
-
-    function nextPage() {
-      if (currentPage < totalPages - 1) {
-        currentPage++;
-        showPage(currentPage);
-      }
-    }
-
-    showPage(currentPage);
-  </script>
+	<div class="pagination">
+		<?php
+			$page = isset($_GET["page"]) ? $_GET["page"] : 1;
+			$per_page = 12;
+			$total_pages = ceil(count($files) / $per_page);
+			for ($i = 1; $i <= $total_pages; $i++) {
+				echo "<a href='?page=$i'";
+				if ($i == $page) {
+					echo " class='active'";
+				}
+				echo ">$i</a>";
+			}
+		?>
+	</div>
 </body>
 </html>
