--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>晦涩的图片</title>
+  <title>弗里曼的图库</title>
   <style>
-    @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 
     * {
     margin: 0;
@@ -18,7 +17,7 @@
 
     body {
     background: #353535;
-    font-family: 'Source Sans Pro', sans-serif;
+    /* font-family: 'Source Sans Pro', sans-serif; */
     overflow: hidden;
     }
 
@@ -56,7 +55,7 @@
         cursor: pointer;
         }
         h1 {
-        color: crimson;
+        color: #00adb5;
         font-size: 20px;
         text-transform: uppercase;
         letter-spacing: 0.1em;
@@ -68,7 +67,7 @@
         }
         }
         h3 {
-        color: crimson;
+        color: #00adb5;
         font-size: 14px;
         text-transform: uppercase;
         letter-spacing: 0.05em;
@@ -79,7 +78,7 @@
         }
         i {
         margin-right: 5px;
-        color: crimson;
+        color: #00adb5;
         }
         .circle {
         position: absolute;
@@ -98,7 +97,7 @@
             top: 90%;
             right: -20%;
             z-index: -1;
-            background: crimson;
+            background: #00adb5;
         }
         }
     }
@@ -154,10 +153,10 @@
 <body>
     <div class="card-container">
         <div class="card">
-          <h1><i class="fa fa-codepen" aria-hidden="true"></i>Codepen</h1>
+          <h1><i class="fa fa-codepen" aria-hidden="true"></i>弗里曼的图库</h1>
           <h1>2334 5467 8756 0932 1284</h1>
-          <h3>Card holder</h3>
-          <h3>Albert Feynman</h3>
+          <h3>持有者</h3>
+          <h3>晦涩弗里曼</h3>
           <div class="circle"></div>
           <div class="circle"></div>
         </div>
