--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>弗里曼的图库</title>
   <style>
+    @import url('https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe');
 
     * {
     margin: 0;
@@ -17,7 +18,7 @@
 
     body {
     background: #353535;
-    /* font-family: 'Source Sans Pro', sans-serif; */
+    font-family: 'ZCOOL KuaiLe', sans-serif;
     overflow: hidden;
     }
 
