--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>弗里曼的图库</title>
   <style>
-    @import url('https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe');
+    @import url('https://fonts.googleapis.com/css?family=Roboto');
 
     * {
     margin: 0;
@@ -18,7 +18,7 @@
 
     body {
     background: #353535;
-    font-family: 'ZCOOL KuaiLe', sans-serif;
+    font-family: 'Roboto', sans-serif;
     overflow: hidden;
     }
 
@@ -29,8 +29,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    max-width: 500px;
-    height: 500px;
+    max-width: 1000px;
+    height: 1000px;
     .card {
         position: absolute;
         margin: auto;
