--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <style>
     @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+    :root {
+        --main-color: #9dff00;
+    }
     * {
     margin: 0;
     padding: 0;
@@ -29,8 +32,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    max-width: 1000px;
-    height: 1000px;
+    max-width: 500px;
+    height: 500px;
     .card {
         position: absolute;
         margin: auto;
@@ -56,7 +59,7 @@
         cursor: pointer;
         }
         h1 {
-        color: #00adb5;
+        color: var(--main-color);
         font-size: 20px;
         text-transform: uppercase;
         letter-spacing: 0.1em;
@@ -68,7 +71,7 @@
         }
         }
         h3 {
-        color: #00adb5;
+        color: var(--main-color);
         font-size: 14px;
         text-transform: uppercase;
         letter-spacing: 0.05em;
@@ -79,7 +82,7 @@
         }
         i {
         margin-right: 5px;
-        color: #00adb5;
+        color: var(--main-color);
         }
         .circle {
         position: absolute;
@@ -98,7 +101,7 @@
             top: 90%;
             right: -20%;
             z-index: -1;
-            background: #00adb5;
+            background: var(--main-color);
         }
         }
     }
