--- a/index.html
+++ b/index.html
@@ -20,24 +20,12 @@
     }
 
     body {
-    /* background: #353535; */
-    background: linear-gradient(to right, #000000, #333333);
+    background: #353535;
     animation: gradientAnimation 5s ease infinite;
     font-family: 'Roboto', sans-serif;
     overflow: hidden;
     }
     
-    @keyframes gradientAnimation {
-        0% {
-            background-position: 0% 50%;
-        }
-        50% {
-            background-position: 100% 50%;
-        }
-        100% {
-            background-position: 0% 50%;
-        }
-    }
 
     .card-container {
     position: absolute;
