--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>弗里曼的图库</title>
-  <link rel="icon" href="logo.svg">
+  <link rel="icon" href="logo.ico">
   <style>
     @import url('https://fonts.googleapis.com/css?family=Roboto');
 
